# wish-wall

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_session.py
backend/app/: __init__.py  __main__.py  settings.py
backend/app/common/: __init__.py  database.py  error_code.py  exception.py  logger.py  response.py  singleton.py
backend/app/model/: comment.py  message.py  user.py
backend/app/route/: __init__.py  comment.py  message.py  user.py
backend/app/schema/: comment.py  message.py  user.py
backend/app/service/: __init__.py  comment_service.py  message_service.py  user_service.py
backend/app/util/: __init__.py  auth_decorators.py  jwt_utils.py  validation_decorators.py
backend/migrations/: env.py
backend/migrations/versions/: 19108cdc3ec3_complete_database_schema_with_all_fields.py
backend/scripts/: docker-entrypoint.sh  init-db.sql  init-test-db.sql  lint.py  migrations.py  seed.py  test-setup.sh  verify_seed.py
backend/tests/: conftest.py  test_api_endpoints.py  test_comment_service.py  test_message_service.py  test_user_service.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/components/: AuthModal.tsx  CommentSection.tsx  CreateMessageForm.tsx  Header.tsx  MessageCard.tsx  MessageList.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: index.tsx
frontend/src/styles/: globals.css
frontend/src/utils/: api.ts
